# blockchain-demo

./: .env  Cargo.toml  README.md
migrations/: 20240203095751_init.sql
src/: main.rs
src/backend/: get.rs  mod.rs  post.rs  test.rs
src/crypto/: hash.rs  mod.rs  sig.rs
src/db/: accounts.rs  blocks.rs  merkle_tree.rs  mod.rs  transactions.rs
src/models/: api.rs  config.rs  error.rs  merkle_tree.rs  mod.rs  primitives.rs
