[package]
name = "uni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

hex = "0.4"
secp256k1 = "0.28.1"
actix-web = "4.4.1"
blake2 = "0.10.6"
sqlx = { version = "0.7.3", features = ["postgres"] }
rand = "0.8.5"
log = "0.4.20"
dotenv = "0.15.0"
serde = "1.0.196"
serde_json = "1.0.114"